[UPDATE] user swagger
